9/14/09 - v1.1, added support for the Spreedly API v4 [Matthew Bass]

11/17/08 - v1.0 [Matthew Bass]