@@ -1,3 +1,5 @@
-9/14/09 - v1.1, added support for the Spreedly API v4 [Matthew Bass]
+8/19/10 - v1.2 upgrades for Radiant 0.9.1 [Matthew Bass]
+
+9/14/09 - v1.1 added support for the Spreedly API v4 [Matthew Bass]
 
 11/17/08 - v1.0 [Matthew Bass]
